deploy/k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: koreanmate
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: 3000
